# snipster

./: .gitmodules  pyproject.toml
src/snipster/: models.py
